# lily-viewer

./: .gitignore  package-lock.json  package.json
src/: App.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Search.tsx  SummaryTable.tsx
tdoc/: 240430_tauri+React+TailwindCSS_導入.md
